--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+        <nav class="navbar navbar-expand navbar-dark fixed-top" id="mainNav">
             <div class="container-fluid">
                 <a class="navbar-brand js-scroll-trigger text-primary" href="#page-top">L O G O</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,6 +33,8 @@
                               <a class="dropdown-item js-scroll-trigger" href="#story">Project Story</a>
                               <a class="dropdown-item js-scroll-trigger" href="#style">Work Style</a>
                               <a class="dropdown-item js-scroll-trigger" href="#interview">Interview</a>
+                              <a class="dropdown-item js-scroll-trigger" href="#blog">Blog</a>
+                              <a class="dropdown-item js-scroll-trigger" href="#recruit">Recruit</a>
                             </div>
                         </li>
                     </ul>
@@ -43,10 +45,10 @@
         <header class="masthead">
             <div class="container">
                 <div class="masthead-heading text-uppercase">ホームページを売りたい企 </i></div>
-                <div class="card col-sm-10 offset-sm-1 " style="border: none; ">
+                <div class="card col-10 offset-1 rounded-0 border-0">
                   <div class="card-body">
-                    <h4 class="judul text-primary mt-4">TECHNICAL</h4>
-                    <p class="mb-0 text-dark text-muted mb-4 mt-4">ホームページを売りたい企</p>
+                    <h4 class="judul text-primary mt-4 mb-4">TECHNICAL</h4>
+                    <p class="mb-0 text-dark text-muted mb-4">ホームページを売りたい企</p>
                     <p class="mb-0 text-dark">ホームページを売りたい企ホームページを売りたい企ホームページを売りたい企</p>
                     <p class="mb-0 text-dark">ホームページを売りたい企ホームページを売りたい企ホームページを売りたい企</p>
                   </div>
@@ -54,16 +56,63 @@
             </div>
         </header>
         <!-- Project-->
-        <section class="page-section" id="project">
-            <div class="row">
-                <div class="col-sm-12">
-                    <img src="assets/image/Project-file.png" class="img-fluid mb-5">
+        <section class="page-section" id="portfolio">
+            <div class="row mb-5">
+                <div class="col p-0">
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" href="#">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-search fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/image/pf1.png" alt="" />
+                        </a>
+                    </div>
+                </div>
+                <div class="col p-0">
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" href="#">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-search fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/image/pf2.png" alt="" />
+                        </a>
+                    </div>
+                </div>
+                <div class="col p-0">
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" href="#">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-search fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/image/pf3.png" alt="" />
+                        </a>
+                    </div>
+                </div>
+                <div class="col p-0">
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" href="#">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-search fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/image/pf4.png" alt="" />
+                        </a>
+                    </div>
+                </div>
+                <div class="col p-0">
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" href="#">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-search fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/image/pf5.png" alt="" />
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-10 offset-sm-1">
-                        <div class="jumbotron mt-5" style="background-image: url(assets/image/100.png); background-size: 100%; padding-bottom: 1rem; ">
+                    <div class="col-10 offset-1">
+                        <div class="jumbotron mt-5 rounded-0" style="background-image: url(assets/image/100.png); background-size: 100%; padding-bottom: 1rem; ">
                           <p class="text-center text-white mt-5 pt-3 mb-0 pb-0">Aiming for 100 years company</p>
                           <a href="#">  
                             <p class="text-right text-white pt-5 mb-0 pb-0">MORE</p>
@@ -74,50 +123,50 @@
             </div>
         </section>
         <!-- Story -->
-        <section class="page-section" id="story" style="background-image: url('assets/image/back2.png'); background-position: center; z-index: 1; margin-top: 100px;">
+        <section class="page-section" id="story" style="background-image: url('assets/image/back3.png'); background-position: center;background-size: 97%;">
             <div class="row">
-                <div class="col-sm-8">
+                <div class="col-8">
                     <img src="assets/image/Side Project Story.png " class="img-fluid">
                 </div>
-                <div class="col-sm-4 text-uppercase text-primary">
+                <div class="col-4 text-uppercase text-primary">
                     <h1 class="judul" style=" margin-top: 7rem;">Project<br>Story</h1>
                 </div>
                 <div class="container" style="margin-top: -2rem;">
-                    <div class="col-sm-6 offset-sm-6">
-                        <button type="button" class="btn btn-primary btn-lg btn-block p-3 rounded-0">01   ホームページを売りたい企ホーム</button>
-                        <button type="button" class="btn btn-primary btn-lg btn-block p-3 rounded-0">02   ホームページを売りたい企ホーム</button>
+                    <div class="col-6 offset-6">
+                        <button type="button" class="btn btn-primary btn btn-block p-3 rounded-0">01   ホームページを売りたい企ホーム</button>
+                        <button type="button" class="btn btn-primary btn btn-block p-3 rounded-0">02   ホームページを売りたい企ホーム</button>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Style -->
-        <section class="page-section" id="style">
+        <section class="page-section" id="style" style="background-image: url('assets/image/back6.png'); background-position: center;background-size: 97%;">
             <div class="row">
-                <div class="col-sm-4 text-uppercase text-center text-primary">
+                <div class="col-4 text-uppercase text-center text-primary">
                     <h1 class="judul" style=" margin-top: 7rem;">Work<br>Style</h1>
                 </div>
-                <div class="col-sm-8">
+                <div class="col-8">
                     <img src="assets/image/Side WORK STYLE.png " class="img-fluid">
                 </div>
                 <div class="container" style="margin-top: -2rem;">
-                    <div class="col-sm-6">
-                        <button type="button" class="btn btn-primary btn-lg btn-block p-3 rounded-0">01   ホームページを売りたい企ホーム</button>
+                    <div class="col-6">
+                        <button type="button" class="btn btn-primary btn btn-block p-3 rounded-0">01   ホームページを売りたい企ホーム</button>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Interview -->
-        <section class="page-section" id="interview">
+        <section class="page-section" id="interview" style="background-image: url('assets/image/back8.png'); background-position: center;background-size: 100%;">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-5 offset-sm-1 text-left">
+                    <div class="col-5 offset-1 text-left">
                         <h1 class="judul text-uppercase text-primary mt-5">Interview</h1>
                         <p class="text-muted">企ホーム</p>
                         <p class="my-4"><strong>ホームページを売りたい企ホーム ホームページを売りたい企ホーム ホームページを売りたい企ホーム</strong></p>
                         <p class="text-muted mb-4">OOOO / 企ホーム</p>
                         <a href="#" class="text-primary">MORE</a>
                     </div>
-                    <div class="col-sm-5">
+                    <div class="col-5">
                         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                           <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -132,7 +181,7 @@
                           </div>
                         </div>
                     </div>
-                    <div class="col-sm-1" style="margin-left: -25px; padding-top: 261px;">   
+                    <div class="col-1" style="margin-left: -25px; padding-top: 261px;">   
                         <a class="btn btn-primary rounded-0 mb-1" href="#carouselExampleControls" role="button" data-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
@@ -144,11 +193,11 @@
                     </div>
                 </div>
                 <div class="row mt-5 pt-5">
-                    <div class="col-sm-5 offset-sm-1">
-                        <button type="button" class="btn btn-primary btn-lg btn-block p-3 rounded-0">01   ホームページを売りたい企ホーム</button> 
+                    <div class="col-5 offset-1">
+                        <button type="button" class="btn btn-light btn btn-block p-3 rounded-0 border-0" style="background-color: #fff;">01   ホームページを売りたい企ホーム</button> 
                     </div>   
-                    <div class="col-sm-5">
-                        <button type="button" class="btn btn-primary btn-lg btn-block p-3 rounded-0">01   ホームページを売りたい企ホーム</button> 
+                    <div class="col-5">
+                        <button type="button" class="btn btn-light btn btn-block p-3 rounded-0 border-0" style="background-color: #fff;">01   ホームページを売りたい企ホーム</button> 
                     </div>  
                 </div>
             </div>
@@ -157,80 +206,84 @@
         <section class="page-section" id="Perahu" style="background-image: url('assets/image/Under Interview.png');">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-5 offset-sm-1">   
+                    <div class="col-5 offset-1">   
                         <div class="card rounded-0">
                           <img src="assets/image/Up Left.png" class="card-img-top" alt="...">
+                          <button type="button" class="btn btn-light btn btn-block p-3 rounded-0 border-0" style="background-color: #fff;">ホームページを売りたい企ホーム</button> 
                         </div>
                     </div>
-                    <div class="col-sm-5">   
+                    <div class="col-5">   
                         <div class="card rounded-0">
                           <img src="assets/image/Up Right.png" class="card-img-top" alt="...">
+                          <button type="button" class="btn btn-light btn btn-block p-3 rounded-0 border-0" style="background-color: #fff;">ホームページを売りたい企ホーム</button> 
                         </div>
                     </div>
                 </div>
                 <div class="row mt-4">
-                    <div class="col-sm-5 offset-sm-1">   
+                    <div class="col-5 offset-1">   
                         <div class="card rounded-0">
                           <img src="assets/image/Down Left.png" class="card-img-top" alt="...">
+                          <button type="button" class="btn btn-light btn btn-block p-3 rounded-0 border-0" style="background-color: #fff;">ホームページを売りたい企ホーム</button> 
                         </div>
                     </div>
-                    <div class="col-sm-5">   
+                    <div class="col-5">   
                         <div class="card rounded-0">
                           <img src="assets/image/Down Right.png" class="card-img-top" alt="...">
+                          <button type="button" class="btn btn-light btn btn-block p-3 rounded-0 border-0" style="background-color: #fff;">ホームページを売りたい企ホーム</button> 
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Blog -->
-        <section class="page-section pt-5" id="Blog">
+        <section class="page-section pt-5" id="blog">
             <div class="container">
                 <div class="text-center mb-5">
                     <h1 class="judul text-uppercase text-primary">Blog</h1>
                     <p>ホームページを売りたい企ホーム</p>
                 </div>
                 <div class="row" style="padding-left: 80px; padding-right: 80px">
-                    <div class="col-sm-4">   
+                    <div class="col-4">   
                         <img src="assets/image/Blog 1.png" class="card-img-top" alt="...">
-                        <h6 class="mt-2"><a class="text-dark" href="">NEWS 0000.00.00</a></h6>
+                        <h6 class="mt-2"><a class="text-primary" href="">NEWS </a>0000.00.00</h6>
                         <p style="line-height: 1.5rem;">ホームページを売りたホームページを売りたい企ホーム</p>
                     </div>
-                    <div class="col-sm-4">   
+                    <div class="col-4">   
                         <img src="assets/image/Blog 2.png" class="card-img-top" alt="...">
-                        <h6 class="mt-2"><a class="text-dark" href="">NEWS 0000.00.00</a></h6>
+                        <h6 class="mt-2"><a class="text-primary" href="">NEWS </a>0000.00.00</h6>
                         <p style="line-height: 1.5rem;">ホームページを売りたホームページを売りたい企ホーム</p>
                     </div>
-                    <div class="col-sm-4">   
+                    <div class="col-4">   
                         <img src="assets/image/Blog 3.png" class="card-img-top" alt="...">
-                        <h6 class="mt-2"><a class="text-dark" href="">NEWS 0000.00.00</a></h6>
+                        <h6 class="mt-2"><a class="text-primary" href="">NEWS </a>0000.00.00</h6>
                         <p style="line-height: 1.5rem;">ホームページを売りたホームページを売りたい企ホーム</p>
                     </div>
                 </div>
                 <div class="row mt-4">
-                    <div class="col-sm-2 offset-sm-5">
+                    <div class="col-2 offset-5">
                         <button class="btn btn-outline-dark btn-block text-uppercase rounded-0" id="sendMessageButton" type="submit">MORE</button>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Recruit -->
-        <section class="page-section pt-0" id="Recruit">
+        <section class="page-section pt-0" id="recruit">
             <div class="container">
                 <div class="text-center mb-5">
                     <h1 class="judul text-uppercase text-primary">Recruit</h1>
                     <p>ホームペ</p>
                 </div>
                 <div class="row" style="padding-left: 80px; padding-right: 80px">
-                    <div class="col-sm-3">   
+                    <div class="col-3">   
                         <img src="assets/image/Recruit 1.png" class="card-img-top" alt="...">
                     </div>
-                    <div class="col-sm-3">   
+                    <div class="col-3">   
                         <img src="assets/image/Recruit 2.png" class="card-img-top" alt="...">
                     </div>
-                    <div class="col-sm-3">   
+                    <div class="col-3">   
                         <img src="assets/image/Recruit 3.png" class="card-img-top" alt="...">
                     </div>
-                    <div class="col-sm-3">   
+                    <div class="col-3">   
                         <img src="assets/image/Recruit 4.png" class="card-img-top" alt="...">
                     </div>
                 </div>
@@ -240,8 +293,8 @@
         <section class="page-section" id="contact">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-4 offset-sm-4 px-5">
-                        <button class="btn btn-primary btn-lg btn-block text-uppercase rounded-0 py-3" id="sendMessageButton" type="submit">Entry</button>
+                    <div class="col-4 offset-4 px-5">
+                        <button class="btn btn-primary btn btn-block text-uppercase rounded-0 py-3" id="sendMessageButton" type="submit">Entry</button>
                     </div>
                 </div>
             </div>
@@ -250,11 +303,11 @@
         <footer class="footer py-4 bg-primary">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-left">
+                    <div class="col-4 text-left">
                         <a class="mr-3 text-white" href="#!">ホームページを売</a>
                         <a class="text-white" href="#!">ームページを</a>
                     </div>
-                    <div class="col-lg-4 text-lg-right offset-lg-4 text-white">©2020 SAMPLE Inc. All Rights Reserved.</div>
+                    <div class="col-4 text-right offset-4 text-white">©2020 SAMPLE Inc. All Rights Reserved.</div>
                 </div>
             </div>
         </footer>
